...
            "value" : "مفتاح API"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "API key"
          }
        }
      }
    },
    "settings.apiKeySection" : {
      "extractionState" : "manual",
...
            "value" : "يتم استخدام المفتاح المدمج"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Using built-in key"
          }
        }
      }
    },
    "settings.apiKeyUsingYours" : {
      "extractionState" : "manual",
...
            "value" : "يتم استخدام مفتاحك"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Using your key"
          }
        }
      }
    },
    "settings.attachedPdfs" : {
      "extractionState" : "manual",
...
            "value" : "الرجوع إلى المفتاح المدمج"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Reset to built-in"
          }
        }
      }
    },
    "settings.save" : {
      "extractionState" : "manual",
...
